examples/error/ch0311_err1.jle
# This Program calculates the cost of a rug

display "Let's calculate the cost of a rug", nl;

# next line is missing semi colin 
display "Enter the length and width in feet"
input l; 
input w;

display "What is the cost per square foot?", nl;
input c;

cost := l*w*c;
    
display "The cost of the rug is $", cost;